# MakeDrake

./: .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
common/: CMakeLists.txt  README.md  add_text_logging_gflags.cc  autodiff.h  autodiff_overloads.h  autodiffxd.h  bit_cast.h  cond.cc  cond.h  copyable_unique_ptr.h  default_scalars.h  diagnostic_policy.cc  diagnostic_policy.h  double_overloads.cc  double_overloads.h  drake_assert.h  drake_assert_and_throw.cc  drake_assertion_error.h  drake_bool.h  drake_copyable.h  drake_deprecated.cc  drake_deprecated.h  drake_marker.cc  drake_path.cc  drake_throw.h  dummy_value.h  eigen_autodiff_types.h  eigen_types.h  extract_double.h  find_cache.cc  find_cache.h  find_loaded_library.cc  find_resource.cc  find_resource.h  find_runfiles.cc  find_runfiles.h  find_runfiles_stub.cc  fmt.h  fmt_eigen.cc  fmt_eigen.h  (+48 more)
drake/: CMakeLists.txt  experimental_lcmt_deformable_tri.hpp  experimental_lcmt_deformable_tri_mesh_init.hpp  experimental_lcmt_deformable_tri_mesh_update.hpp  experimental_lcmt_deformable_tri_meshes_init.hpp  experimental_lcmt_deformable_tri_meshes_update.hpp  lcmt_acrobot_u.hpp  lcmt_acrobot_x.hpp  lcmt_acrobot_y.hpp  lcmt_allegro_command.hpp  lcmt_allegro_status.hpp  lcmt_call_python.hpp  lcmt_call_python_data.hpp  lcmt_contact_results_for_viz.hpp  lcmt_drake_signal.hpp  lcmt_force_torque.hpp  lcmt_header.hpp  lcmt_hydroelastic_contact_surface_for_viz.hpp  lcmt_hydroelastic_quadrature_per_point_data_for_viz.hpp  lcmt_iiwa_command.hpp  lcmt_iiwa_status.hpp  lcmt_iiwa_status_telemetry.hpp  lcmt_image.hpp  lcmt_image_array.hpp  lcmt_jaco_command.hpp  lcmt_jaco_status.hpp  lcmt_panda_command.hpp  lcmt_panda_status.hpp  lcmt_planar_gripper_command.hpp  lcmt_planar_gripper_finger_command.hpp  lcmt_planar_gripper_finger_face_assignment.hpp  lcmt_planar_gripper_finger_face_assignments.hpp  lcmt_planar_gripper_finger_status.hpp  lcmt_planar_gripper_status.hpp  lcmt_planar_manipuland_status.hpp  lcmt_planar_plant_state.hpp  lcmt_point.hpp  lcmt_point_cloud.hpp  lcmt_point_cloud_field.hpp  lcmt_point_pair_contact_info_for_viz.hpp  (+11 more)
geometry/: CMakeLists.txt  collision_filter_declaration.cc  collision_filter_declaration.h  collision_filter_manager.cc  collision_filter_manager.h  deformable_mesh_with_bvh.cc  deformable_mesh_with_bvh.h  drake_visualizer.cc  drake_visualizer.h  drake_visualizer_params.h  geometry_file_formats_doxygen.h  geometry_frame.cc  geometry_frame.h  geometry_ids.h  geometry_instance.cc  geometry_instance.h  geometry_properties.cc  geometry_properties.h  geometry_roles.cc  geometry_roles.h  geometry_set.h  geometry_state.cc  geometry_state.h  geometry_version.cc  geometry_version.h  internal_frame.cc  internal_frame.h  internal_geometry.cc  internal_geometry.h  kinematics_vector.cc  kinematics_vector.h  make_mesh_for_deformable.cc  make_mesh_for_deformable.h  mesh_deformation_interpolator.cc  mesh_deformation_interpolator.h  meshcat.cc  meshcat.h  meshcat.html  meshcat_animation.cc  meshcat_animation.h  (+35 more)
lcm/: CMakeLists.txt  drake_lcm.cc  drake_lcm.h  drake_lcm_base.cc  drake_lcm_base.h  drake_lcm_interface.cc  drake_lcm_interface.h  drake_lcm_log.cc  drake_lcm_log.h  drake_lcm_params.h  lcm_messages.cc  lcm_messages.h  lcmt_drake_signal_utils.cc  lcmt_drake_signal_utils.h
math/: CMakeLists.txt  autodiff.cc  autodiff.h  autodiff_gradient.cc  autodiff_gradient.h  barycentric.cc  barycentric.h  binomial_coefficient.cc  bspline_basis.cc  bspline_basis.h  compute_numerical_gradient.h  continuous_algebraic_riccati_equation.cc  continuous_algebraic_riccati_equation.h  continuous_lyapunov_equation.cc  continuous_lyapunov_equation.h  convert_time_derivative.h  cross_product.cc  cross_product.h  differentiable_norm.cc  differentiable_norm.h  discrete_algebraic_riccati_equation.cc  discrete_algebraic_riccati_equation.h  discrete_lyapunov_equation.cc  discrete_lyapunov_equation.h  eigen_sparse_triplet.cc  eigen_sparse_triplet.h  evenly_distributed_pts_on_sphere.cc  fast_pose_composition_functions.h  fast_pose_composition_functions_avx2_fma.cc  gradient.cc  gradient.h  gradient_util.h  gray_code.cc  gray_code.h  hopf_coordinate.cc  hopf_coordinate.h  jacobian.cc  jacobian.h  linear_solve.cc  linear_solve.h  (+23 more)
multibody/: CMakeLists.txt  multibody_doxygen.h
perception/: CMakeLists.txt  depth_image_to_point_cloud.cc  depth_image_to_point_cloud.h  point_cloud.cc  point_cloud.h  point_cloud_flags.cc  point_cloud_flags.h  point_cloud_to_lcm.cc  point_cloud_to_lcm.h
planning/: CMakeLists.txt  body_shape_description.cc  body_shape_description.h  collision_avoidance.cc  collision_avoidance.h  collision_checker.cc  collision_checker.h  collision_checker_context.cc  collision_checker_context.h  collision_checker_params.h  distance_and_interpolation_provider.cc  distance_and_interpolation_provider.h  edge_measure.h  linear_distance_and_interpolation_provider.cc  linear_distance_and_interpolation_provider.h  robot_clearance.cc  robot_clearance.h  robot_collision_type.h  robot_diagram.cc  robot_diagram.h  robot_diagram_builder.cc  robot_diagram_builder.h  scene_graph_collision_checker.cc  scene_graph_collision_checker.h  unimplemented_collision_checker.cc  unimplemented_collision_checker.h  visibility_graph.cc  visibility_graph.h
pydrake/: .clang-format  CMakeLists.txt  __init__.py  autodiff_types_pybind.h  forwarddiff.py  lcm_py.cc  math_operators_pybind.h  perception_py.cc  polynomial_py.cc  polynomial_types_pybind.h  pydrake_doxygen.h  stubgen.py  symbolic_types_pybind.h  trajectories_py.cc
solvers/: CMakeLists.txt  aggregate_costs_constraints.cc  aggregate_costs_constraints.h  augmented_lagrangian.cc  augmented_lagrangian.h  binding.h  branch_and_bound.cc  branch_and_bound.h  choose_best_solver.cc  choose_best_solver.h  clarabel_solver.cc  clarabel_solver.h  clarabel_solver_common.cc  clp_solver.cc  clp_solver.h  clp_solver_common.cc  common_solver_option.cc  common_solver_option.h  constraint.cc  constraint.h  cost.cc  cost.h  create_constraint.cc  create_constraint.h  create_cost.cc  create_cost.h  csdp_cpp_wrapper.cc  csdp_solver.h  (+109 more)
(+2606 files in other folders)
