cmake_minimum_required(VERSION 3.28)
project(MakeDrake)

list(INSERT CMAKE_MODULE_PATH 0 "${CMAKE_SOURCE_DIR}/cmake")

set(CMAKE_CXX_STANDARD 20)
find_package(Eigen3 CONFIG REQUIRED)
find_package(fmt CONFIG REQUIRED)
find_package(GTest CONFIG REQUIRED)
find_package(benchmark CONFIG REQUIRED)
find_package(absl CONFIG REQUIRED)
find_package(yaml-cpp CONFIG REQUIRED)
set(GFLAGS_USE_TARGET_NAMESPACE ON)
find_package(gflags CONFIG REQUIRED)
find_package(hwy CONFIG REQUIRED)
find_package(Qhull CONFIG REQUIRED)
find_package(fcl CONFIG REQUIRED)
find_package(VTK REQUIRED)
find_package(tinyobjloader CONFIG REQUIRED)
find_package(msgpack-cxx CONFIG REQUIRED)
find_package(stduuid CONFIG REQUIRED)
find_package(nlohmann_json CONFIG REQUIRED)
find_package(lcm CONFIG REQUIRED)
find_package(nanoflann CONFIG REQUIRED)
find_package(tinyxml2 CONFIG REQUIRED)
find_package(sdformat13 CONFIG REQUIRED)
find_package(GLIB2 REQUIRED)

add_subdirectory(third_party)
add_subdirectory(drake)

add_subdirectory(common)
add_subdirectory(math)
add_subdirectory(math/test)
add_subdirectory(solvers)
add_subdirectory(multibody)
add_subdirectory(geometry)

add_subdirectory(perception)
add_subdirectory(planning)

add_subdirectory(systems)
add_subdirectory(lcm)
add_subdirectory(visualization)